Added release.symbols Added static libraries Updated command line for compile and link